--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "euler-pc-ui",
+  "name": "euler-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.4",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-resize-detector": "^1.2.2",
+    "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
